--- a/styles.scss
+++ b/styles.scss
@@ -17,6 +17,12 @@
   background-color: var(--light-bg-color) !important;
 }
 
+html,
+body {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
 .app {
   height: 100vh;
   width: 100%;
@@ -257,4 +263,16 @@
 
 .hide-task {
   display: none !important;
+}
+
+/*mobile styles potrait*/
+@media (min-width: 0px) and (max-width: 767px) {
+  .app .image-container {
+    display: none;
+  }
+  .app .main {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 0 0.5rem;
+  }
 }
