--- a/styles.scss
+++ b/styles.scss
@@ -1,7 +1,7 @@
 * {
   padding: 0;
   margin: 0;
-  font-size: 18px;
+  font-size: 16px;
   font-family: "Josefin Sans", sans-serif;
   --dark-bg-color: #181824;
   --dark-text-color: #fff;
@@ -26,36 +26,25 @@ body {
 .app {
   height: 100vh;
   width: 100%;
-  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: var(--dark-bg-color);
   transition: linear 0.3s;
 
-  .image-container {
-    width: 100%;
-    object-fit: cover;
-
-    .bg-image {
-      width: 100%;
-      transition: linear 0.3s;
-    }
-  }
-
   .main {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 10;
+    // position: absolute;
+    box-sizing: border-box;
     height: 29rem;
     width: 30rem;
     display: flex;
     flex-direction: column;
 
     .header {
-      flex-basis: 10%;
+      height: 10%;
       display: flex;
       align-items: center;
-      margin-bottom: 2rem;
+      // margin-bottom: 2rem;
 
       .header-text {
         font-size: 2.25rem;
@@ -74,6 +63,7 @@ body {
     }
 
     .main-app {
+      height: 90%;
       display: flex;
       flex-direction: column;
 
@@ -81,10 +71,9 @@ body {
         display: flex;
         align-items: center;
         width: 100%;
-        height: 3rem;
+        flex-basis: 10%;
         background-color: var(--dark-input-color);
         padding: 0.5rem 1rem;
-        border-radius: 5px;
         box-sizing: border-box;
         margin-bottom: 1em;
 
@@ -111,10 +100,10 @@ body {
 
       .created-tasks {
         width: 100%;
-        min-height: 3rem;
-        max-height: 18rem;
+        // min-height: 20%;
+        max-height: 80%;
         overflow-y: auto;
-        position: relative;
+        // position: relative;
 
         &::-webkit-scrollbar {
           width: 0.3rem;
@@ -203,10 +192,8 @@ body {
         display: flex;
         align-items: center;
         justify-content: space-around;
-        border-bottom-left-radius: 5px;
-        border-bottom-right-radius: 5px;
         width: 100%;
-        height: 3rem;
+        flex-basis: 10%;
         font-weight: 600;
         color: #555672;
         background-color: var(--dark-input-color);
@@ -267,11 +254,13 @@ body {
 
 /*mobile styles potrait*/
 @media (min-width: 0px) and (max-width: 767px) {
-  .app .image-container {
-    display: none;
+  .app {
+    padding: 1rem 0.5rem;
+    box-sizing: border-box;
   }
   .app .main {
     width: 100%;
+    height: 100%;
     box-sizing: border-box;
     padding: 0 0.5rem;
   }
